--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-    An object that is used for maintaining to an
+    An object that is used for maintaining an
     application's settings. It has been designed
-    with both the ease in data-oriented
+    with both the ease of data-oriented
     initialization and natural access from the 
     code.
 
