--- a/README
+++ b/README
@@ -2,7 +2,7 @@
     application's settings. It has been designed
     with both the ease of data-oriented
     initialization and natural access from the 
-    code.
+    code in mind.
 
     When initializing an optionbag it will be used
     largely like a normal dictionary.
